fix: исправить класс и выравнивание кнопки like

--- a/index.html
+++ b/index.html
@@ -44,42 +44,42 @@
           <img src="images/elton.jpeg" alt="Озеро Эльтон" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Эльтон</h2>
-            <div class="button button__like"></div>
+            <div class="button button_action_like"></div>
           </div>
         </li>
         <li class="card">
           <img src="images/baikal.jpeg" alt="Склон у Байкала" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Байкал</h2>
-            <div class="button button__like"></div>
+            <div class="button button_action_like"></div>
           </div>
         </li>
         <li class="card">
           <img src="images/kungurskaja-peschera.jpeg" alt="Снег и лед в пещере" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Кунгурская пещера</h2>
-            <div class="button button__like"></div>
+            <div class="button button_action_like"></div>
           </div>
         </li>
         <li class="card">
           <img src="images/dombay.jpeg" alt="Лес на фоне гор" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Домбай</h2>
-            <div class="button button__like"></div>
+            <div class="button button_action_like"></div>
           </div>
         </li>
         <li class="card">
           <img src="images/dolina-gejzerov.jpg" alt="Долина гейзеров" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Долина гейзеров</h2>
-            <div class="button button__like"></div>
+            <div class="button button_action_like"></div>
           </div>
         </li>
         <li class="card">
           <img src="images/Manpupuner-rock-formations.jpeg" alt="" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Столбы выветривания</h2>
-            <div class="button button__like"></div>
+            <div class="button button_action_like"></div>
           </div>
         </li>
       </ul>
