--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </footer>
   <div class="popup">
     <div class="popup__container">
-      <button class="button button_action_close"></button>
+      <button class="button button_action_close" type="button"></button>
       <form class="popup__form" name="editForm">
         <h3 class="popup__title">Редактировать профиль</h3>
         <input type="text" placeholder="Имя" class="popup__input popup__input_type_name" name="name" value="Жак-Ив Кусто">
