feat: добавить кнопку удаления карточки

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <section class="gallery">
       <ul class="cards">
         <li class="card">
+          <button class="button button_action_delete" type="button"></button>
           <img src="images/elton.jpeg" alt="Озеро Эльтон" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Эльтон</h2>
@@ -35,6 +36,7 @@
           </div>
         </li>
         <li class="card">
+          <button class="button button_action_delete" type="button"></button>
           <img src="images/baikal.jpeg" alt="Склон у Байкала" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Байкал</h2>
@@ -42,6 +44,7 @@
           </div>
         </li>
         <li class="card">
+          <button class="button button_action_delete" type="button"></button>
           <img src="images/kungurskaja-peschera.jpeg" alt="Снег и лед в пещере" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Кунгурская пещера</h2>
@@ -49,6 +52,7 @@
           </div>
         </li>
         <li class="card">
+          <button class="button button_action_delete" type="button"></button>
           <img src="images/dombay.jpeg" alt="Лес на фоне гор" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Домбай</h2>
@@ -56,6 +60,7 @@
           </div>
         </li>
         <li class="card">
+          <button class="button button_action_delete" type="button"></button>
           <img src="images/dolina-gejzerov.jpg" alt="Долина гейзеров" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Долина гейзеров</h2>
@@ -63,6 +68,7 @@
           </div>
         </li>
         <li class="card">
+          <button class="button button_action_delete" type="button"></button>
           <img src="images/Manpupuner-rock-formations.jpeg" alt="" class="card__image">
           <div class="card__info">
             <h2 class="card__title">Столбы выветривания</h2>
