--- a/index.html
+++ b/index.html
@@ -42,28 +42,35 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
   </footer>
-  <div class="popup">
+  <div class="popup popup_type_edit">
     <div class="popup__container">
       <button class="button button_action_close" type="button"></button>
-      <form class="popup__form" name="editForm">
-        <h3 class="popup__title">Редактировать профиль</h3>
+      <form class="popup__form popup__form_type_edit" name="editForm"  autocomplete="off">
+        <h3 class="popup__heading popup__heading_type_edit">Редактировать профиль</h3>
         <input type="text" placeholder="Имя" class="popup__input popup__input_type_name" name="name" value="Жак-Ив Кусто">
         <input type="text" placeholder="О себе" class="popup__input popup__input_type_about" name="about" value="Исследователь океана">
-        <button type="submit" class="popup__submit-button">Сохранить</button>
+        <button type="submit" class="popup__submit-button popup__submit-button_type_edit">Сохранить</button>
       </form>
     </div>
   </div>
-  <!-- <div class="popup">
+  <div class="popup popup_type_add">
     <div class="popup__container">
       <button class="button button_action_close" type="button"></button>
-      <form class="popup__form" name="editForm">
-        <h3 class="popup__title">Новое место</h3>
+      <form class="popup__form popup__form_type_add" name="addForm"  autocomplete="off">
+        <h3 class="popup__heading popup__heading_type_add">Новое место</h3>
         <input type="text" placeholder="Название" class="popup__input popup__input_type_title" name="title" value="">
         <input type="text" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link" value="">
-        <button type="submit" class="popup__submit-button">Создать</button>
+        <button type="submit" class="popup__submit-button popup__submit-button_type_add">Создать</button>
       </form>
     </div>
-  </div> -->
+  </div>
+  <div class="popup popup_type_image">
+    <div class="popup__container">
+      <button class="button button_action_close" type="button"></button>
+      <img class="popup__image"></img>
+      <p class="popup__caption"></p>
+    </div>
+  </div>
   <script src="scripts/script.js"></script>
 </body>
 </html>
