refactor: исправить теги у карточки и фотографии

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <h2 class="card__title"></h2>
               <button class="button button_action_like" type="button"></button>
             </div>
+          </div>
         </template>
       </div>
     </section>
@@ -68,7 +69,7 @@
     <div class="popup__container">
       <button class="button button_action_close" type="button"></button>
       <div class="popup__wrap">
-        <img class="popup__image"></img>
+        <img class="popup__image">
         <p class="popup__caption"></p>
       </div>
     </div>
