refactor: добавить атрибуты alt и src тегам img

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <template id="cardTemplate">
           <div class="card">
             <button class="button button_action_delete" type="button"></button>
-            <img class="card__image">
+            <img class="card__image" alt="#" src="#">
             <div class="card__info">
               <h2 class="card__title"></h2>
               <button class="button button_action_like" type="button"></button>
@@ -69,7 +69,7 @@
     <div class="popup__container">
       <button class="button button_action_close" type="button"></button>
       <div class="popup__wrap">
-        <img class="popup__image">
+        <img class="popup__image" alt="#" src="#">
         <p class="popup__caption"></p>
       </div>
     </div>
