--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img class="card__image" alt="#" src="#">
             <div class="card__info">
               <h2 class="card__title"></h2>
-              <button class="button button_action_like" type="button"></button>
+              <button class="button button__like" type="button"></button>
             </div>
           </div>
         </template>
