--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       <button class="button button_action_close" type="button"></button>
       <form class="popup__form popup__form_type_edit" name="editForm"  autocomplete="off">
         <h3 class="popup__heading popup__heading_type_edit">Редактировать профиль</h3>
-        <input type="text" placeholder="Имя" class="popup__input popup__input_type_name" name="name" id="name-input" minlength="2" maxlength="40" value="" required>
-        <span class="popup__form_input-error name-input-error"></span>
-        <input type="text" placeholder="О себе" class="popup__input popup__input_type_about" name="about" id="about-input" minlength="2" maxlength="200" value="" required>
-        <span class="popup__form_input-error about-input-error"></span>
+        <input type="text" placeholder="Имя" class="popup__input popup__input_type_name" name="name" minlength="2" maxlength="40" value="" required>
+        <span class="popup__input-error popup__input-error_type_name"></span>
+        <input type="text" placeholder="О себе" class="popup__input popup__input_type_about" name="about" minlength="2" maxlength="200" value="" required>
+        <span class="popup__input-error popup__input-error_type_about"></span>
         <button type="submit" class="popup__submit-button popup__submit-button_type_edit">Сохранить</button>
       </form>
     </div>
@@ -61,10 +61,10 @@
       <button class="button button_action_close" type="button"></button>
       <form class="popup__form popup__form_type_add" name="addForm"  autocomplete="off">
         <h3 class="popup__heading popup__heading_type_add">Новое место</h3>
-        <input type="text" placeholder="Название" class="popup__input popup__input_type_title" name="title" id="title-input" minlength="2" maxlength="30" value="" required>
-        <span class="popup__form_input-error title-input-error"></span>
-        <input type="text" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link" id="link-input" value="" required>
-        <span class="popup__form_input-error link-input-error"></span>
+        <input type="text" placeholder="Название" class="popup__input popup__input_type_title" name="title" minlength="2" maxlength="30" value="" required>
+        <span class="popup__input-error popup__input-error_type_title"></span>
+        <input type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link" value="" required>
+        <span class="popup__input-error popup__input-error_type_link"></span>
         <button type="submit" class="popup__submit-button popup__submit-button_type_add">Создать</button>
       </form>
     </div>
@@ -79,6 +79,6 @@
     </div>
   </div>
   <script src="scripts/script.js"></script>
-  <script src="scripts/validate.js"></script>
+  <script src="scripts/validation.js"></script>
 </body>
 </html>
