--- a/index.html
+++ b/index.html
@@ -43,19 +43,6 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
   </footer>
-  <div class="popup popup_type_add">
-    <div class="popup__container">
-      <button class="button button_action_close" type="button"></button>
-      <form class="popup__form popup__form_type_add" name="addForm"  autocomplete="off">
-        <h3 class="popup__heading popup__heading_type_add">Новое место</h3>
-        <input type="text" placeholder="Название" class="popup__input popup__input_type_title" name="title" minlength="2" maxlength="30" value="" required>
-        <span class="popup__input-error popup__input-error_type_title"></span>
-        <input type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link" value="" required>
-        <span class="popup__input-error popup__input-error_type_link"></span>
-        <button type="submit" class="popup__submit-button popup__submit-button_type_add">Создать</button>
-      </form>
-    </div>
-  </div>
   <div class="popup popup_type_edit">
     <div class="popup__container">
       <button class="button button_action_close" type="button"></button>
@@ -69,7 +56,19 @@
       </form>
     </div>
   </div>
-
+  <div class="popup popup_type_add">
+    <div class="popup__container">
+      <button class="button button_action_close" type="button"></button>
+      <form class="popup__form popup__form_type_add" name="addForm"  autocomplete="off">
+        <h3 class="popup__heading popup__heading_type_add">Новое место</h3>
+        <input type="text" placeholder="Название" class="popup__input popup__input_type_title" name="title" minlength="2" maxlength="30" value="" required>
+        <span class="popup__input-error popup__input-error_type_title"></span>
+        <input type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link" value="" required>
+        <span class="popup__input-error popup__input-error_type_link"></span>
+        <button type="submit" class="popup__submit-button popup__submit-button_type_add">Создать</button>
+      </form>
+    </div>
+  </div>
   <div class="popup popup_type_image">
     <div class="popup__container">
       <button class="button button_action_close" type="button"></button>
@@ -80,6 +79,7 @@
     </div>
   </div>
   <script src="scripts/script.js"></script>
+  <script src="scripts/initialCards.js"></script>
   <script src="scripts/validation.js"></script>
 </body>
 </html>
