--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
     </div>
   </div>
   <script src="scripts/validation.js"></script>
-  <script src="scripts/script.js"></script>
-  <script src="scripts/initialCards.js"></script>
+  <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
