--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-  <link rel="stylesheet" href="pages/index.css">
   <title>Mesto</title>
 </head>
 <body class="page">
   <header class="header">
     <a href="#" class="header__link">
-      <img src="images/logo.svg" alt="Логотип" class="header__logo">
+      <img src="<%=require('./images/logo.svg')%>" alt="Логотип" class="header__logo">
     </a>
   </header>
   <main class="content">
@@ -78,6 +77,5 @@
       </div>
     </div>
   </div>
-  <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
