refactor: сделать аватар img

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </header>
   <main class="content">
     <section class="profile">
-      <div class="profile__avatar"></div>
+      <img src="<%=require('../src/images/avatar.jpg')%>" alt="Аватар" class="profile__avatar"></img>
       <div class="profile__info">
         <div class="profile__title">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
