refactor: добавить счетчик

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,10 @@
             <img class="card__image" alt="#" src="#">
             <div class="card__info">
               <h2 class="card__title"></h2>
-              <button class="button button__like" type="button"></button>
+              <div class="card__like">
+                <button class="button button__like" type="button"></button>
+                <p class="card__like_counter">0</p>
+              </div>
             </div>
           </div>
         </template>
