--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
   </header>
   <main class="content">
     <section class="profile">
-      <img src="<%=require('../src/images/avatar.jpg')%>" alt="Аватар" class="profile__avatar"></img>
+      <div class="profile__avatar-container">
+        <button class="button button_action_edit-avatar" type="button"></button>
+        <img src="<%=require('../src/images/avatar.jpg')%>" alt="Аватар" class="profile__avatar"></img>
+      </div>
       <div class="profile__info">
         <div class="profile__title">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
