--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <section class="profile">
       <div class="profile__avatar-container">
         <button class="button button_action_edit-avatar" type="button"></button>
-        <img src="<%=require('../src/images/avatar.jpg')%>" alt="Аватар" class="profile__avatar"></img>
+        <img src="<%=require('../src/images/avatar.jpg')%>" alt="Аватар" class="profile__avatar">
       </div>
       <div class="profile__info">
         <div class="profile__title">
